# UniversalColors

./: .gitignore  CMakeLists.txt  Q_deploiement.bat  README.md
Qml/: Main.qml
Qml/Controllers/: ChromeBwTab.qml  ChromeTab.qml  ColorsTab.qml  ControlsTab.qml  Screenshot.qml  ThemeTab.qml
Qml/Vues/: ChromeBwTabForm.ui.qml  ChromeTabForm.ui.qml  ColorName.qml  ColorsTabForm.ui.qml  ControlsTabForm.ui.qml  Echantillon.qml  Separator.ui.qml  ThemeTabForm.ui.qml
Ressources/: UniversalColors.qrc
Sources/: main.cpp
